Half-decent fix for the iterations dropdown layout issue.

--- a/src/styles/SettingsPanel.css
+++ b/src/styles/SettingsPanel.css
@@ -3,7 +3,7 @@
   display: flex; 
   flex-direction: column;
   margin: 20px;
-  width: 170px;
+  width: 175px;
   z-index: 2; /* This allows color picker to float */
 }
 
@@ -75,7 +75,7 @@
   width: 60px;
 }
 
-.settings-panel .select-with-custom-option button {
+.settings-panel .select-with-custom-option button:not(:disabled) {
   color: #444;
   background-color: #efebe5;
   border: 1px solid #999;
